@@ -239,6 +239,7 @@ extern AVFilter ff_vf_framepack;
 extern AVFilter ff_vf_framerate;
 extern AVFilter ff_vf_framestep;
 extern AVFilter ff_vf_freezedetect;
+extern AVFilter ff_vf_freezeframes;
 extern AVFilter ff_vf_frei0r;
 extern AVFilter ff_vf_fspp;
 extern AVFilter ff_vf_gblur;
